user ile ilişkili hale getirildi kategori ler ara tabloya ekleniyor.